[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/testweapon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 6.5 )

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Rig/Body/RightArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 30.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Rig/Body/Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0002 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rig/Body/RightLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Rig/Body/LeftLeg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Rig/Body/RightArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Rig/Body/LeftArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Rig/Body/RightLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rig/Body/LeftLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 27
collision_mask = 18
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 4.5, 10.5 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Polygons" type="Node2D" parent="."]

[node name="Body" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 3, 6, 3, 11, 6, 11, 6, 6 )
uv = PoolVector2Array( 3, 6, 3, 11, 6, 11, 6, 6 )
bones = [ NodePath("Body"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="LeftArm" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 0, 6, 0, 7, 3, 7, 3, 6 )
uv = PoolVector2Array( 0, 6, 0, 7, 3, 7, 3, 6 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 1, 1, 1, 1 ) ]

[node name="RightArm" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 6, 6, 6, 7, 9, 7, 9, 6 )
uv = PoolVector2Array( 6, 6, 6, 7, 9, 7, 9, 6 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="LeftLeg" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 3, 11, 3, 13, 4, 13, 4, 11 )
uv = PoolVector2Array( 3, 11, 3, 13, 4, 13, 4, 11 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="RightLeg" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 5, 11, 5, 13, 6, 13, 6, 11 )
uv = PoolVector2Array( 5, 11, 5, 13, 6, 13, 6, 11 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Weapon" type="Polygon2D" parent="Polygons"]
show_behind_parent = true
position = Vector2( 7, 1 )
texture = ExtResource( 2 )
skeleton = NodePath("../../Rig")
polygon = PoolVector2Array( 3, 7, 0, 7, 0, 0, 3, 0 )
uv = PoolVector2Array( 3, 7, 0, 7, 0, 0, 3, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="HeadGroup" type="Node2D" parent="Polygons"]

[node name="Head" type="Polygon2D" parent="Polygons/HeadGroup"]
texture = ExtResource( 1 )
skeleton = NodePath("../../../Rig")
polygon = PoolVector2Array( 4, 4, 3, 4, 3, 6, 7, 6, 7, 3, 4, 3 )
uv = PoolVector2Array( 4, 4, 3, 4, 3, 6, 7, 6, 7, 3, 4, 3 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 1, 1, 1, 1, 1, 1 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0, 0, 0 ) ]

[node name="Hat" type="Polygon2D" parent="Polygons/HeadGroup"]
texture = ExtResource( 1 )
skeleton = NodePath("../../../Rig")
polygon = PoolVector2Array( 0, 0, 7, 0, 7, 3, 4, 3, 4, 4, 0, 4 )
uv = PoolVector2Array( 0, 0, 7, 0, 7, 3, 4, 3, 4, 4, 0, 4 )
bones = [ NodePath("Body"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/Head"), PoolRealArray( 1, 1, 1, 1, 1, 1 ), NodePath("Body/RightLeg"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/LeftLeg"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/RightArm"), PoolRealArray( 0, 0, 0, 0, 0, 0 ), NodePath("Body/LeftArm"), PoolRealArray( 0, 0, 0, 0, 0, 0 ) ]

[node name="Rig" type="Skeleton2D" parent="."]

[node name="Body" type="Bone2D" parent="Rig"]
position = Vector2( 4.5, 8.5 )
rest = Transform2D( 1, 0, 0, 1, 4.5, 8.5 )

[node name="Head" type="Bone2D" parent="Rig/Body"]
position = Vector2( 0, -2.5 )
rotation = -1.5708
rest = Transform2D( -3.61999e-06, -1, 1, -3.61999e-06, 0, -2.5 )
default_length = 6.0

[node name="RightLeg" type="Bone2D" parent="Rig/Body"]
position = Vector2( 1, 2.5 )
rotation = 1.5708
rest = Transform2D( -4.37114e-08, 1, -1, -4.37114e-08, 1, 2.5 )
default_length = 2.0

[node name="LeftLeg" type="Bone2D" parent="Rig/Body"]
position = Vector2( -1, 2.5 )
rotation = 1.5708
rest = Transform2D( -4.37114e-08, 1, -1, -4.37114e-08, -1, 2.5 )
default_length = 2.0

[node name="RightArm" type="Bone2D" parent="Rig/Body"]
position = Vector2( 1.5, -2 )
rotation = -0.785398
rest = Transform2D( 1, 0, 0, 1, 1.5, -2 )
default_length = 3.0

[node name="LeftArm" type="Bone2D" parent="Rig/Body"]
position = Vector2( -1.5, -2 )
rotation = 3.14159
rest = Transform2D( -1, 2.53518e-06, -2.53518e-06, -1, -1.5, -2 )
default_length = 3.0

[node name="CollDetect" type="Node2D" parent="."]

[node name="Cast" type="RayCast2D" parent="CollDetect"]
position = Vector2( 4.5, 8.5 )
enabled = true
cast_to = Vector2( 128, 0 )
collision_mask = 18
collide_with_areas = true

[node name="HitBox" type="Area2D" parent="CollDetect"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollDetect/HitBox"]
position = Vector2( 4.5, 6.5 )
shape = SubResource( 2 )

[node name="Misc" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Misc"]
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Misc"]

[node name="Cooldown" type="Timer" parent="Misc"]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="Misc/Cooldown" to="." method="_on_Cooldown_timeout"]
